[project]
name = "sql"
version = "0.1.0"
description = ""
authors = [
    {name = "MAK8405",email = "mahdiahmadi2005kf@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipython-sql (>=0.5.0,<0.6.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "prettytable (==3.7.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
